--- a/vscd/Procejt1/js/index.html
+++ b/vscd/Procejt1/js/index.html
@@ -13,5 +13,8 @@
 <li>Et explicabo accusamus blanditiis est a ex accusantium vitae, doloribus voluptatem officiis nemo cumque consectetur, excepturi pariatur dignissimos. Commodi molestiae excepturi illum ducimus incidunt quis culpa nihil natus harum vero!</li>
 <li>Tempora accusantium distinctio architecto quidem minima aliquid eius repellendus cumque quod eveniet, temporibus, provident consequatur atque, quos nisi! Id ipsam aliquid minima suscipit blanditiis nemo corporis nobis quam, eveniet recusandae?</li>pol </ul>></ul>
 
+varsam medineye dönmem geriye
+ gelmem
+
 
 ljkfdnkwtkg
