--- a/vscd/Project1/js/index.html
+++ b/vscd/Project1/js/index.html
@@ -1,24 +1,11 @@
-<ul>pol <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis reiciendis labore non beatae, a possimus, autem sit, magnam ab aperiam fugiat ex quos eius illo odit repudiandae fuga distinctio perferendis.</li>
-<li>pol Distinctio iure porro aperiam, totam aut temporibus cupiditate esse sequi sed corrupti nesciunt incidunt placeat architecto optio labore quos ab accusamus eos voluptatum natus laboriosam ducimus commodi quas tenetur! Dolore?</li>
-<li>pol Quibusdam est vitae nulla eos, a nobis quae sequi perferendis cum odio quidem, debitis ipsum, aspernatur corporis tempore doloribus? Quas vitae molestias eligendi quia sequi quibusdam animi earum! Reprehenderit, blanditiis.</li>
-<li>pol Excepturi officia incidunt, dolores nemo iusto commodi perferendis blanditiis ipsam cum iure, veniam veritatis. Autem tempora aut a officiis ducimus pariatur minus nisi, accusantium libero dolorum obcaecati quasi tempore in?</li>
-<li>Perspiciatis obcaecati porro assumenda asperiores accusamus! Velit, expedita molestias tempore quam nulla exercitationem accusantium earum totam, in culpa illo repudiandae nam voluptatibus? Blanditiis commodi, delectus nostrum neque doloremque amet nisi!</li>
-
-
-
-<li>Dolore, quos similique odit tempora modi officia hic ut quidem quam accusantium consequatur. Dignissimos, tempore. Minima commodi, provident excepturi, numquam asperiores fugit sapiente similique explicabo fuga labore reprehenderit nihil maxime.</li>
-
-<li>Et quod culpa eius accusantium sapiente nam ratione inventore, eligendi quisquam possimus voluptas vitae quos officia. Vitae minus excepturi animi, omnis accusamus odio, porro quibusdam officiis, quidem necessitatibus ipsa assumenda.</li>
-<li>Asperiores quas nobis temporibus eveniet excepturi, dolore pariatur obcaecati placeat aliquid eum expedita aliquam laboriosam omnis quod labore quam accusamus. Optio fugiat nihil vitae hic quam nam provident voluptatum natus.</li>
-<li>Et explicabo accusamus blanditiis est a ex accusantium vitae, doloribus voluptatem officiis nemo cumque consectetur, excepturi pariatur dignissimos. Commodi molestiae excepturi illum ducimus incidunt quis culpa nihil natus harum vero!</li>
-<li>Tempora accusantium distinctio architecto quidem minima aliquid eius repellendus cumque quod eveniet, temporibus, provident consequatur atque, quos nisi! Id ipsam aliquid minima suscipit blanditiis nemo corporis nobis quam, eveniet recusandae?</li>pol </ul>></ul>
-
-varsam medineye dönmem geriye
- gelmem
-
- lklkl 
-
-ljkfdnkwtkg
-!
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
